--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Roboto:wght@100;300;400;500&display=swap');
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  outline: none;
+  border: none;
+  overflow-x: none;
+
+}
+
+:root {
+  --color-dark-primary: #303F9F;
+  --color-light-primary: #C5CAE9;
+  --color-primary: #3F51B5;
+  --color-text-icon: #FFFFFF;
+  --color-accent: #FF9800;
+  --color-primary-text: #212121;
+  --color-secondary-text: #757575;
+  --color-divider: #BDBDBD;
+
+
+  --border-radius: 20px;
+
+  --box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+ 
+}
+
 body {
   margin: 0;
+  padding: 0;
+  height: 100vh;
+  background-color: var(--color-light-primary);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.btn {
+  font-size: 14px;
+  padding: 0.5rem;
+  margin-top: 1rem;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  border-radius: var(--border-radius);
+  background-color: var(--color-accent);
+  color: var(--color-text-icon)
+  
+}
+
+.main-btn {
+  font-size: 14px;
+  padding: 0.5rem;
+  margin-top: 1rem;
+  border: none;
+  cursor: pointer;
+  border-radius: var(--border-radius);
+  background-color: var(--color-dark-primary);
+  color: var(--color-text-icon)
+}
+
+
+.text {
+  margin-bottom: 0.5rem;
+  color: var(--color-secondary-text);
 }
